PostGIS 3.5.0dev
xxxx/xx/xx

* Breaking Changes *

  - xmllint is now required to build comments and documentation
  - DocBook5 XSL is now required to build html documentation

* New Features *

  - #5055, add explicit <> geometry operator to prevent non-unique
           error with <> and != (Paul Ramsey)

* Enhancements *

  - #5531, documentation format upgraded to DocBook 5 (Sandro Santilli)


PostGIS 3.4.0
2023/08/15

This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Vincent Bre (French Team)

There are 2 new ./configure switches:

 -  --disable-extension-upgrades-install, will skip installing all the extension upgrade scripts except for the ANY--currentversion. If you use this, you can install select upgrades using the postgis commandline tool
 -  --without-pgconfig, will build just the commandline tools
    raster2pgsql and shp2pgsql even if PostgreSQL is not installed

* New Features *
  - #5055, complete manual internationalization (Sandro Santilli)
  - #5052, target version support in postgis_extensions_upgrade
    (Sandro Santilli)
  - #5306, expose version of GEOS at compile time (Sandro Santilli)
  - New install-extension-upgrades command in postgis script (Sandro Santilli)
  - #5257, #5261, #5277, Support changes for PostgreSQL 16 (Regina Obe)
  - #5006, GH705, ST_Transform: Support PROJ pipelines (Robert Coup, Koordinates)
  - #5283, [postgis_topology] RenameTopology (Sandro Santilli)
  - #5286, [postgis_topology] RenameTopoGeometryColumn (Sandro Santilli)
  - GH703, [postgis_raster] Add min/max resampling as options (Christian Schroeder)
  - #5336, [postgis_topology] topogeometry cast to topoelement support (Regina Obe)
  - Allow singleton geometry to be inserted into Geometry(Multi*) columns (Paul Ramsey)