@@ -19,15 +19,6 @@ completing these steps::
   make
   make install
 
-If you are building from the source SVN repository, it is also recommended to
-make the comments, since the function descriptions will be included::
-
-  make comments
-
-Making the comments is not necessary if you are building from the tar.gz source
-distributions, since these include pre-built ``postgis_comments.sql``,
-``topology_comments.sql``, and ``raster_comments.sql`` files.
-
 Then, to build and install the extensions::
 
   cd extensions
